refactor: first pass on removing GraviteeContext usage on services